--- a/schools/index.html
+++ b/schools/index.html
@@ -1,15 +1,101 @@
 <!Doctype html>
+<style>
+#navi{
+background-color:grey;
+width:50%;
+margin-left:25%;
+height:1100px;
+display:flex;
+justify-content:center;
+border-radius:10px;
+}
+#name{
+height:40px;
+width:600px;
+}
+#parents_name{
+height:40px;
+width:600px;
+}
+#phone_no{
+height:40px;
+width:600px;
+}
+#address{
+height:40px;
+width:600px;
+}
+#dob{
+height:40px;
+width:600px;
+}
+#username{
+height:40px;
+width:600px;
+}
+#password{
+height:40px;
+width:600px;
+}
+#email{
+height:40px;
+width:600px;
+}
+
+</style>
+
 <html>
+<body>
+<nav id="navi">
 <form method="POST" enctype="multipart/form-data">
 <center>
-<label>NAME: </label><input type="text" name="name"/><br/><br/>
-<label>PHONE NUMBER: </label><input type="number" name="phoneNumber"/><br/><br/>
-<label>USERNAME: </label><input type="text" name="username"/><br/><br/>
-<label>PASSWORD: </label><input type="text" name="password"/><br/><br/>
-<label>PARENTS: </label><input type="text" name="parentsName"/><br/><br/>
-<input type="submit" value="SUBMIT NOW"/>
+<h3>NAME: </h3><br/><input type="text" id="name"/><br/>
+<h3>PARENTS NAME: </h3><br/><input type="number" id="parents_name"/><br/>
+<h3>PHONE NO: </h3><br/><input type="number" id="phone_no"/><br/>
+<h3>ADDRESS: </h3><br/><input type="text" id="address" /><br/>
+<h3>DATE OF BIRTH: </h3><br/><input type="number" id="dob" /><br/>
+<h3>USERNAME: </h3><br/><input type="text" id="username" /><br/>
+<h3>PASSWORD: </h3><br/><input type="password" id="password" /><br/>
+<h3>EMAIL: </h3><br/><input type="text" id="email" /><br/><br/><br/>
+<button onclick= "funct()">ENROL NOW</button>
 </center>
 </form>
+<script>
+function funct(){
+var name = document.getElementById("name").value;
+var parents_name = document.getElementById("parents_name").value;
+var phone_no = document.getElementById("phone_no").value;
+var address = document.getElementById("address").value;
+var dob = document.getElementById("dob").value;
+var username = document.getElementById("username").value;
+var password = document.getElementById("password").value;
+var email = document.getElementById("email").value;
 
+ var kJson = {};
+ kJson['name'] = name;
+ kJson['parents_name'] = parents_name;
+ kJson['phone_no'] = phone_no;
+ kJson['address'] = address;
+ kJson['dob'] = dob;
+ kJson['username'] = username;
+ kJson['password'] = password;
+ kJson['email'] = email;
+ var b = JSON.stringify(kJson);
+const api = '/auth/signup?n=' + b;
 
+var xmlhttp = new XMLHttpRequest();
+xmlhttp.onreadystatechange = function(){
+if (this.readyState == 4 && this.status == 200){
+var myObj = this.responseText;
+console.log(myObj);
+}
+};
+xmlhttp.open("GET", api, true);
+xmlhttp.send();
+};
+</script>
+
+</nav>
+
+</body>
 </html>
