--- a/schools/index.html
+++ b/schools/index.html
@@ -45,6 +45,10 @@ width:600px;
 </style>
 
 <html>
+<head>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.ja"></script>
+</head>
+
 <body>
 <nav id="navi">
 <form method="POST" enctype="multipart/form-data">
