--- a/schools/index.html
+++ b/schools/index.html
@@ -45,16 +45,14 @@ width:600px;
 </style>
 
 <html>
-<head>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.ja"></script>
-</head>
+
 
 <body>
 <nav id="navi">
 <form method="POST" enctype="multipart/form-data">
 <center>
 <h3>NAME: </h3><br/><input type="text" id="name"/><br/>
-<h3>PARENTS NAME: </h3><br/><input type="number" id="parents_name"/><br/>
+<h3>PARENTS NAME: </h3><br/><input type="text" id="parents_name"/><br/>
 <h3>PHONE NO: </h3><br/><input type="number" id="phone_no"/><br/>
 <h3>ADDRESS: </h3><br/><input type="text" id="address" /><br/>
 <h3>DATE OF BIRTH: </h3><br/><input type="number" id="dob" /><br/>
