--- a/schools/index.html
+++ b/schools/index.html
@@ -52,6 +52,11 @@ width:600px;
 <body>
 <nav id="navi">
 <form method="POST" enctype="multipart/form-data">
+<div id="preview"></div>
+<div id='loading' style="display:none">
+loading.....
+
+</div>
 <center>
 <h3>NAME: </h3><br/><input type="text" id="name"/><br/>
 <h3>PARENTS NAME: </h3><br/><input type="text" id="parents_name"/><br/>
