--- a/schools/index.html
+++ b/schools/index.html
@@ -46,7 +46,7 @@ width:600px;
 
 <html>
 <head>
-<script src="jquery-2.1.4.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 </head>
 
 <body>
