--- a/schools/index.html
+++ b/schools/index.html
@@ -53,7 +53,7 @@ width:600px;
 <nav id="navi">
 <form method="POST" enctype="multipart/form-data">
 <div id="preview"></div>
-<div id='loading' style="display:none">
+<div id='loading' style="display">
 loading.....
 
 </div>
