--- a/schools/index.html
+++ b/schools/index.html
@@ -46,7 +46,8 @@ width:600px;
 
 <html>
 <head>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<title>Bifolu Schools-- Signup Page</title>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 </head>
 
 <body>
@@ -103,7 +104,8 @@ $("#preview").html('<h2>' + data + '</h2>');
 });
 }));
 });
-</script></nav>
+</script>
+</nav>
 
 </body>
 </html>
