--- a/schools/index.html
+++ b/schools/index.html
@@ -54,10 +54,6 @@ width:600px;
 <nav id="navi">
 <form method="POST" enctype="multipart/form-data">
 <div id="preview"></div>
-<div id='loading' style="display">
-loading.....
-
-</div>
 <center>
 <h3>NAME: </h3><br/><input type="text" id="name"/><br/>
 <h3>PARENTS NAME: </h3><br/><input type="text" id="parents_name"/><br/>
@@ -69,6 +65,11 @@ loading.....
 <h3>EMAIL: </h3><br/><input type="text" id="email" /><br/><br/><br/>
 <button onclick= "funct()" id="funct">ENROL NOW</button>
 </center>
+<div id='loading' style="display:none">
+<h1>loading.....</h1>
+
+</div>
+
 </form>
 <script>
 $(document).ready(function (e) {
@@ -98,7 +99,7 @@ success: function(data)
 $('#loading').hide();
 console.log(data);
 
-$("#preview").html('<h2>' + data + '</h2>');
+$('#preview').html('<h2>' + data + '</h2>');
 
 }
 });
