--- a/schools/index.html
+++ b/schools/index.html
@@ -59,11 +59,11 @@ width:600px;
 <h3>PARENTS NAME: </h3><br/><input type="text" id="parents_name"/><br/>
 <h3>PHONE NO: </h3><br/><input type="number" id="phone_no"/><br/>
 <h3>ADDRESS: </h3><br/><input type="text" id="address" /><br/>
-<h3>DATE OF BIRTH: </h3><br/><input type="number" id="dob" /><br/>
+<h3>DATE OF BIRTH: </h3><br/><input type="text" id="dob" /><br/>
 <h3>USERNAME: </h3><br/><input type="text" id="username" /><br/>
 <h3>PASSWORD: </h3><br/><input type="password" id="password" /><br/>
 <h3>EMAIL: </h3><br/><input type="text" id="email" /><br/><br/><br/>
-<button onclick= "funct()" id="funct">ENROL NOW</button>
+<button  id="funct">ENROL NOW</button>
 </center>
 <div id='loading' style="display:none">
 <h1>loading.....</h1>
